[gd_scene load_steps=7 format=3 uid="uid://omwosk1a6l4l"]

[ext_resource type="Script" path="res://Scripts/GUIController.gd" id="1_65sgt"]
[ext_resource type="Texture2D" uid="uid://cu2nvskgdahk7" path="res://Assets/Sprites/ShielaCards/card_fire.png" id="1_julbh"]
[ext_resource type="Texture2D" uid="uid://c1ac1et8jnw11" path="res://Assets/Sprites/ShielaCards/card_lightning.png" id="2_eq2hx"]
[ext_resource type="Texture2D" uid="uid://1pya03rman3o" path="res://Assets/Sprites/ShielaCards/card_plant.png" id="3_oegqi"]
[ext_resource type="Texture2D" uid="uid://cbkttfjiyfemp" path="res://Assets/Sprites/ShielaCards/card_water.png" id="4_6o4wd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nhh8i"]
bg_color = Color(0, 0, 0, 0.501961)

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_65sgt")

[node name="Panels" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 960.0
offset_bottom = 540.0

[node name="PanelFire" type="Panel" parent="Panels"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 397.0
offset_top = -90.0
offset_right = 467.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_nhh8i")

[node name="FireCard" type="TextureRect" parent="Panels/PanelFire"]
layout_mode = 0
offset_top = 2.0
offset_right = 70.0
offset_bottom = 70.0
texture = ExtResource("1_julbh")
expand_mode = 1

[node name="PanelLightning" type="Panel" parent="Panels"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 397.0
offset_top = -90.0
offset_right = 467.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_nhh8i")

[node name="LightningCard" type="TextureRect" parent="Panels/PanelLightning"]
layout_mode = 0
offset_top = 2.0
offset_right = 70.0
offset_bottom = 70.0
texture = ExtResource("2_eq2hx")
expand_mode = 1

[node name="PanelPlant" type="Panel" parent="Panels"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 397.0
offset_top = -90.0
offset_right = 467.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_nhh8i")

[node name="PlantCard" type="TextureRect" parent="Panels/PanelPlant"]
layout_mode = 0
offset_top = 2.0
offset_right = 70.0
offset_bottom = 70.0
texture = ExtResource("3_oegqi")
expand_mode = 1

[node name="PanelWater" type="Panel" parent="Panels"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 397.0
offset_top = -90.0
offset_right = 467.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_nhh8i")

[node name="WaterCard" type="TextureRect" parent="Panels/PanelWater"]
layout_mode = 0
offset_top = 2.0
offset_right = 70.0
offset_bottom = 70.0
texture = ExtResource("4_6o4wd")
expand_mode = 1

[node name="Timer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="Timer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.5
offset_right = 20.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "00:00
"

[node name="Clock" type="Timer" parent="Timer"]
autostart = true

[node name="Score" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="Score"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 403.0
offset_top = 60.0
offset_right = 518.0
offset_bottom = 102.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "SCORE"
horizontal_alignment = 1

[node name="ScoreNumber" type="Label" parent="Score"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 403.0
offset_top = 102.0
offset_right = 518.0
offset_bottom = 144.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.879556, 0.501791, 0.886663, 1)
theme_override_font_sizes/font_size = 30
text = "000"
horizontal_alignment = 1

[connection signal="timeout" from="Timer/Clock" to="." method="_on_timer_timeout"]
